EF2IGDB00-27 Fix overflow on table on 1080p 16:9

--- a/src/components/Table.scss
+++ b/src/components/Table.scss
@@ -1,4 +1,5 @@
 .table-container {
+  overflow: scroll;
   table {
     width: 100%;
     border-collapse: collapse;
@@ -8,6 +9,7 @@
     background-color: #fff;
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
     border-radius: 12px;
+
 
     thead {
       background-color: #f5f7fa;
